Update README with benchmark run instructions
Add step-by-step instructions for running unit tests and the benchmark
JAR against LM Studio, Ollama, remote machines, and cloud baselines.
Document BENCH_LOCAL_URL and BENCH_LOCAL_MODEL env vars.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>